[gd_scene load_steps=3 format=3 uid="uid://m44l5picjhad"]

[ext_resource type="Script" uid="uid://bkw22hnfko1ay" path="res://MainMenu.gd" id="1_i26rj"]

[sub_resource type="LabelSettings" id="LabelSettings_i26rj"]
font_size = 72
font_color = Color(1, 1, 0.03137255, 1)
outline_size = 12
outline_color = Color(0, 0, 0, 1)
shadow_size = 0
shadow_color = Color(0, 0, 0, 0.5882353)
shadow_offset = Vector2(6, 6)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_i26rj")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.0
offset_top = -337.0
offset_right = 125.0
offset_bottom = 337.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Paper Flight Duel"
label_settings = SubResource("LabelSettings_i26rj")
horizontal_alignment = 1
vertical_alignment = 1

[node name="EasyButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(250, 60)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Easy
"

[node name="MediumButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(250, 60)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Medium"

[node name="HardButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(250, 60)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Hard"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(250, 60)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Quit"
